--- a/style/startmenu.css
+++ b/style/startmenu.css
@@ -1,22 +1,10 @@
-@font-face {
-    font-family: 'space';
-    src: URL('/assets/fonts/space-silhouette-font-regular.ttf') format('truetype');
-}
-html, body, canvas {
-    height: 100%; 
-    width: 100%;
-    margin: 0;
-    background: url(/assets/images/background-image.png);
-    font-family: 'Russo One', sans-serif;
-    font-size: 1.6rem;
-}
-
-h1{
+h1 {
     font-family: 'space';
     font-size: 6rem;
     color: #FAFF00;
     text-align: center;
-    
+    margin-bottom: 3rem;
+
 }
 .nameInput {
     border-radius: 1rem;
@@ -24,16 +12,40 @@ h1{
     background-color: #414141;
     color: #FAFF00;
     font-family: 'Russo One', sans-serif;
-    font-size: 2rem;
-    height: 3rem;
+    font-size: 1rem;
+    height: 2rem;
     padding-left: 1rem;
     padding-right:  1rem;
 }
-
-.startGameButton:hover {
-    color: orange;
+.startMenuContainer {
+    line-height: .5;
+    position: absolute;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-canvas{
-    margin-top: 80px
+.startGameButton {
+    margin: .5rem;
+}
+
+.aboutButton, .startGameButton {
+    font-size: 1rem;
+    color: #FAFF00;
+    border: none;
+    background: none;
+}
+
+canvas {
+    filter: blur(4px);
+}
+
+#topMenuContainer {
+    display: none;
+}
+
+.startGameButton:hover, .aboutButton:hover {
+    color: orange;
 }
