--- a/style/startmenu.css
+++ b/style/startmenu.css
@@ -20,12 +20,15 @@ h1 {
 .startMenuContainer {
     line-height: .5;
     position: absolute;
-    top: 50%;
-    left: 50%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    backdrop-filter: blur(4px);
 }
 
 .startGameButton {
@@ -37,10 +40,6 @@ h1 {
     color: #FAFF00;
     border: none;
     background: none;
-}
-
-canvas {
-    filter: blur(4px);
 }
 
 #topMenuContainer {
