--- a/style/pauseMenu.css
+++ b/style/pauseMenu.css
@@ -1,12 +1,24 @@
-#pauseMenuContainer {
-    background-color: #414141;
-    border: solid 2px #FAFF00;
-    border-radius: 20px;
+#pauseContainer {
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    backdrop-filter: blur(4px);
+}
+
+#pauseMenuContainer {
+    background-color: #414141;
+    border: solid 2px #FAFF00;
+    border-radius: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     color: #FAFF00;
     height: 13rem;
     width: 23rem;
